Add pages and fb

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <!--Drawer Menus-->
     <string name="about">About</string>
 
+    <!--Main-->
+    <string name="tests">Tests</string>
+    <string name="results">Results</string>
+
 </resources>
