--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">MyTest</string>
-    <string name="action_settings">Settings</string>
+
+    <!--Main menu -->
+    <string name="action_search">Search</string>
 
     <!--Drawer-->
     <string name="open_drawer">Drawer Open</string>
@@ -8,6 +10,7 @@
 
     <!--Drawer Menus-->
     <string name="about">About</string>
+    <string name="logout">Logout</string>
 
     <!--Main-->
     <string name="tests">Tests</string>
