--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,10 @@
     <!--Hint-->
     <string name="ether_quest">Enter the question name</string>
     <string name="ether_answer">Enter the answer</string>
+    <string name="password">Password</string>
+    <string name="email">e-mail</string>
+    <string name="login">Log in</string>
+    <string name="login_activity">Hello</string>
+    <string name="about_user">About</string>
 
 </resources>
